--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pinak Mehta</title>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="favicon.ico?" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,11 +16,11 @@
   </head>
   <body>
     <div class="top-contanier">
-      <img src="Image\cloud.png" class="top-cloud" alt="Cloud Image" />
+      <img src="cloud.png" class="top-cloud" alt="Cloud Image" />
       <h1>I am Pinak,</h1>
       <h2>a Software Developer</h2>
-      <img src="Image\cloud.png" class="bottom-cloud" alt="Cloud Image" />
-      <img src="Image\mountain.png" alt="mountain Image" />
+      <img src="cloud.png" class="bottom-cloud" alt="Cloud Image" />
+      <img src="mountain.png" alt="mountain Image" />
     </div>
     <div class="middle-container">
       <div class="profile">
